fixing the vertical alignment of form fields in tables, see #278

--- a/grappelli/compass/sass/partials/forms/_autocompletes.scss
+++ b/grappelli/compass/sass/partials/forms/_autocompletes.scss
@@ -23,6 +23,7 @@
 .grp-autocomplete-wrapper-fk {
     a.related-lookup {
         position: absolute;
+        right: 0;
     }
     &.grp-state-focus {
         a.grp-related-remove, 
